parser/src/parser/expressions/snapshots/test__parser::expressions::block::test::parse_block_with_statements.snap
---
created: "2020-03-01T23:46:21.197925Z"
creator: insta@0.8.2
source: parser/src/parser/expressions/block.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 72)
  FN_DEF@[0; 72)
    FN_KW@[0; 2) "fn"
    WHITESPACE@[2; 3) " "
    NAME@[3; 7)
      IDENT@[3; 7) "main"
    PARAM_LIST@[7; 9)
      L_PAREN@[7; 8) "("
      R_PAREN@[8; 9) ")"
    WHITESPACE@[9; 10) " "
    BLOCK_EXPR@[10; 72)
      BLOCK@[10; 72)
        L_CURLY@[10; 11) "{"
        BLOCK_EXPR@[11; 71)
          BLOCK@[11; 71)
            L_CURLY@[11; 12) "{"
            WHITESPACE@[12; 13) "\n"
            WHITESPACE@[13; 14) " "
            WHITESPACE@[14; 15) " "
            WHITESPACE@[15; 16) " "
            WHITESPACE@[16; 17) " "
            WHITESPACE@[17; 18) " "
            WHITESPACE@[18; 19) " "
            WHITESPACE@[19; 20) " "
            WHITESPACE@[20; 21) " "
            LET_STMT@[21; 31)
              LET_KW@[21; 24) "let"
              WHITESPACE@[24; 25) " "
              BIND_PAT@[25; 26)
                NAME@[25; 26)
                  IDENT@[25; 26) "x"
              WHITESPACE@[26; 27) " "
              EQ@[27; 28) "="
              WHITESPACE@[28; 29) " "
              LITERAL@[29; 31)
                INT_NUMBER@[29; 31) "10"
            SEMI@[31; 32) ";"
            WHITESPACE@[32; 33) "\n"
            WHITESPACE@[33; 34) " "
            WHITESPACE@[34; 35) " "
            WHITESPACE@[35; 36) " "
            WHITESPACE@[36; 37) " "
            WHITESPACE@[37; 38) " "
            WHITESPACE@[38; 39) " "
            WHITESPACE@[39; 40) " "
            WHITESPACE@[40; 41) " "
            EXPR_STMT@[41; 46)
              BREAK_EXPR@[41; 46)
                BREAK_KW@[41; 46) "break"
            SEMI@[46; 47) ";"
            WHITESPACE@[47; 48) "\n"
            WHITESPACE@[48; 49) " "
            WHITESPACE@[49; 50) " "
            WHITESPACE@[50; 51) " "
            WHITESPACE@[51; 52) " "
            WHITESPACE@[52; 53) " "
            WHITESPACE@[53; 54) " "
            WHITESPACE@[54; 55) " "
            WHITESPACE@[55; 56) " "
            EXPR_STMT@[56; 64)
              CONTINUE_EXPR@[56; 64)
                CONTINUE_KW@[56; 64) "continue"
            SEMI@[64; 65) ";"
            WHITESPACE@[65; 66) "\n"
            WHITESPACE@[66; 67) " "
            WHITESPACE@[67; 68) " "
            WHITESPACE@[68; 69) " "
            WHITESPACE@[69; 70) " "
            R_CURLY@[70; 71) "}"
        R_CURLY@[71; 72) "}"

