parser/src/parser/expressions/snapshots/test__parser::expressions::block::test::parse_free_block.snap
---
created: "2020-03-03T19:30:54.383446Z"
creator: insta@0.8.2
source: parser/src/parser/expressions/block.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 15)
  FN_DEF@[0; 15)
    FN_KW@[0; 2) "fn"
    WHITESPACE@[2; 3) " "
    NAME@[3; 7)
      IDENT@[3; 7) "main"
    PARAM_LIST@[7; 10)
      L_PAREN@[7; 8) "("
      R_PAREN@[8; 9) ")"
      WHITESPACE@[9; 10) " "
    BLOCK_EXPR@[10; 15)
      BLOCK@[10; 15)
        L_CURLY@[10; 11) "{"
        BLOCK_EXPR@[11; 13)
          BLOCK@[11; 13)
            L_CURLY@[11; 12) "{"
            R_CURLY@[12; 13) "}"
        SEMI@[13; 14) ";"
        R_CURLY@[14; 15) "}"

