parser/src/parser/expressions/snapshots/test__parser::expressions::call_expr::test::parse_call_generic_params_expr.snap
---
created: "2020-02-06T15:57:27.534035Z"
creator: insta@0.8.2
source: parser/src/parser/expressions/call_expr.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 25)
  FN_DEF@[0; 25)
    FN_KW@[0; 2) "fn"
    NAME@[2; 7)
      WHITESPACE@[2; 3) " "
      IDENT@[3; 7) "main"
    PARAM_LIST@[7; 9)
      L_PAREN@[7; 8) "("
      R_PAREN@[8; 9) ")"
    WHITESPACE@[9; 10) " "
    BLOCK_EXPR@[10; 25)
      BLOCK@[10; 25)
        L_CURLY@[10; 11) "{"
        EXPR_STMT@[11; 23)
          CALL_EXPR@[11; 23)
            IDENT_EXPR@[11; 18)
              NAME@[11; 18)
                IDENT@[11; 12) "a"
                COLON_COLON@[12; 13) ":"
                TYPE_PARAM_LIST@[13; 18)
                  L_ANGLE@[13; 14) "<"
                  TYPE_PARAM@[14; 17)
                    IDENT_TYPE@[14; 17)
                      IDENT@[14; 17) "i32"
                  R_ANGLE@[17; 18) ">"
            ARG_LIST@[18; 23)
              L_PAREN@[18; 19) "("
              IDENT_EXPR@[19; 20)
                NAME@[19; 20)
                  IDENT@[19; 20) "a"
              COMMA@[20; 21) ","
              IDENT_EXPR@[21; 22)
                NAME@[21; 22)
                  IDENT@[21; 22) "b"
              R_PAREN@[22; 23) ")"
        SEMI@[23; 24) ";"
        R_CURLY@[24; 25) "}"

