parser/src/parser/expressions/snapshots/test__parser::expressions::call_expr::test::parse_call_ife_with_args.snap
---
created: "2019-10-07T09:48:30.108761Z"
creator: insta@0.8.2
source: parser/src/parser/expressions/call_expr.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 25)
  FN_DEF@[0; 25)
    FN_KW@[0; 2) "fn"
    NAME@[2; 6)
      IDENT@[2; 6) "main"
    PARAM_LIST@[6; 8)
      L_PAREN@[6; 7) "("
      R_PAREN@[7; 8) ")"
    BLOCK@[8; 25)
      L_CURLY@[8; 9) "{"
      EXPR_STMT@[9; 23)
        CALL_EXPR@[9; 23)
          CALL_EXPR@[9; 16)
            NAME@[9; 10)
              IDENT@[9; 10) "a"
            ARG_LIST@[10; 16)
              L_PAREN@[10; 11) "("
              NAME@[11; 12)
                IDENT@[11; 12) "a"
              COMMA@[12; 13) ","
              NAME@[13; 14)
                IDENT@[13; 14) "b"
              COMMA@[14; 15) ","
              R_PAREN@[15; 16) ")"
          ARG_LIST@[16; 23)
            L_PAREN@[16; 17) "("
            LITERAL@[17; 18)
              INT_NUMBER@[17; 18) "1"
            COMMA@[18; 19) ","
            LITERAL@[19; 20)
              INT_NUMBER@[19; 20) "2"
            COMMA@[20; 21) ","
            LITERAL@[21; 22)
              INT_NUMBER@[21; 22) "3"
            R_PAREN@[22; 23) ")"
      SEMI@[23; 24) ";"
      R_CURLY@[24; 25) "}"

